--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ body {
     padding: calc(100vw/1440*20);
     width: 100%;
     height: 80vh;
-    background: radial-gradient(837.78% 378.29% at 69.44% -79.86%, rgba(31, 35, 39, 0) 0%, #191C1F 47.89%, rgba(31, 35, 39, 0) 100%), url(image.jpg);
+    background: radial-gradient(837.78% 378.29% at 69.44% -79.86%, rgba(31, 35, 39, 0) 0%, #191C1F 47.89%,
+        rgba(31, 35, 39, 0) 100%), url(image.jpg);
     background-size: cover;
 }
 
